correction z-index + css accueil text bold

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -22,12 +22,21 @@ body, html{
 //     // font-weight: 700;
 // }
 
+.accueilNavbar {
+    z-index: 1;
+}
+
 .accueilHeader {
     background-image: url('/images/imgAccueil.jpg');
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.accueilTitle {
+    font-size: 55px;
+    z-index: 2;
 }
 
 .accueilTitlePage{
@@ -46,7 +55,7 @@ body, html{
     width: 100%;
 }
 
-.accueilGradiant{
+.accueilGradiant {
     height: 100%;
     width: 100%;
     display: flex;
@@ -60,7 +69,7 @@ body, html{
     margin-right: 10%;
 }
 
-.accueilCardBody{
+.accueilCardBody {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -68,7 +77,7 @@ body, html{
 }
 
 
-.accueilCardPrice{
+.accueilCardPrice {
     // display: flex;
     width: 100%;
     color: black;
@@ -78,13 +87,13 @@ body, html{
     // flex-direction: row;
 }
 
-.accueilCardPriceLeft{
+.accueilCardPriceLeft {
     float: left;
     width: 50%;
 }
 
 
-.accueilCardPriceRight{
+.accueilCardPriceRight {
     float: right;
     width: 50%;
 }
